--- a/CSXU.html
+++ b/CSXU.html
@@ -2,34 +2,104 @@
 	<head>
 		<title>Xavier Computer Science</title>
 		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
+		<script type="text/javascript" src="jquery.easing.1.3.js"></script>
+        <script type="text/javascript">
+            $(function() {
+                $('ul.nav a').bind('click',function(event){
+                    var $anchor = $(this);
+                    /*
+                    if you want to use one of the easing effects:
+                    $('html, body').stop().animate({
+                        scrollLeft: $($anchor.attr('href')).offset().left
+                    }, 1500,'easeInOutExpo');
+                     */
+                    $('html, body').stop().animate({
+                        scrollLeft: $($anchor.attr('href')).offset().left
+                    }, 350);
+                    event.preventDefault();
+                });
+            });
+        </script>
 	</head>
 	<body>
-		<br />
-		<h1>Xavier Computer Science</h1>
-		<br />
-		<div class="tile">
-			<a href="#">CSCI 170</br>Lewandowski</a>
-		</div>
-		<div class="tile">
-			<a href="#">CSCI 170</br>Johnson</a>
-		</div>
-		<div class="tile">
-			<a href="#">CSCI 210</br>Goldweber</a>
-		</div>
-		<br />
-		<div class="tile">
-			<a href="#">CSCI 220</br>Johnson</a>
-		</div>
-		<div class="tile">
-			<a href="#">CSCI 300</br>Lewandowski</a>
-		</div>
-		<div class="tile">
-			<a href="#">CSCI 320</br>Goldweber</a>
-		</div>
-		<br />
-		<div class="tile">
-			<a href="#">CSCI 380</br>Lewandowski</a>
-		</div>
 		
+		<br />
+		<h1 style="margin-left: 50px">Xavier Computer Science</h1>
+		<br />
+		<div class="section black" id="section1">
+				<div class="tileSection">
+					<h2 style="margin-left: 0px;">Courses: Fall 2012</h2>
+					<br />
+					<div class="tile">
+						<a href="#">CSCI 170</br>Lewandowski</a>
+					</div>
+					<div class="tile">
+						<a href="#">CSCI 170</br>Johnson</a>
+					</div>
+					<div class="tile">
+						<a href="#">CSCI 210</br>Goldweber</a>
+					</div>
+					<br />
+					<div class="tile">
+						<a href="#">CSCI 220</br>Johnson</a>
+					</div>
+					<div class="tile">
+						<a href="#">CSCI 300</br>Lewandowski</a>
+					</div>
+					<div class="tile">
+						<a href="#">CSCI 320</br>Goldweber</a>
+					</div>
+					<br />
+					<div class="tile">
+						<a href="#">CSCI 380</br>Lewandowski</a>
+					</div>
+			</div>
+			 <ul class="nav">
+                <li style="font-weight:light;">COURSES</li>
+                <li><a href="#section2">PROFESSORS</a></li>
+                <li><a href="#section3">ETC</a></li>
+            </ul>
+		</div>
+		<div class="section black" id="section2">
+			<div class="tileSection">
+				<h2 style="margin-left: 0px;">Professors</h2>
+				<br />
+				<div class="tile">
+					<a href="#">Dr. Gary</br>Lewandowski</a>
+				</div>
+				<div class="tile">
+					<a href="#">Dr. Michael</br>Goldweber</a>
+				</div>
+				<div class="tile">
+					<a href="#">Dr. Elizabeth</br>Johnson</a>
+				</div>
+			</div>
+			 <ul class="nav">
+                <li><a href="#section1">COURSES</li>
+                <li>PROFESSORS</li>
+                <li><a href="#section3">ETC</a></li>
+            </ul>
+		</div>
+		<div class="section black" id="section3">
+			<div class="tileSection">
+				<h2 style="margin-left: 0px;">Made Up People</h2>
+				<br />
+				<div class="tile">
+					<a href="#">Dr. t</br>f</a>
+				</div>
+				<div class="tile">
+					<a href="#">Dr. f</br>f</a>
+				</div>
+				<div class="tile">
+					<a href="#">Dr. d</br>d</a>
+				</div>
+			</div>
+			<ul class="nav">
+                <li><a href="#section1">COURSES</li>
+                <li><a href="#section2">PROFESSORS</li>
+                <li>ETC</li>
+            </ul>
+		</div>
 	</body>
 </html>
