--- a/CSXU.html
+++ b/CSXU.html
@@ -14,13 +14,7 @@
                 });
             });
         </script>
-        <script type="text/javascript">
-	        function tick(){
-				$('#ticker li:first').animate({'opacity':0}, 200, function () { $(this).appendTo($('#ticker')).css('opacity', 1); });
-			}
-			setInterval(function(){ tick () }, 4000);
-        </script>
-	</head>
+   	</head>
 	<body>
 		
 		<div class="title">
@@ -33,11 +27,13 @@
 		<br />
 		<br />
 		<br />
-		 <ul class="nav">
-                <li><a href="#section1">COURSES</li>
-                <li><a href="#section2">PROFESSORS</a></li>
-                <li><a href="#section3">ETC</a></li>
-            </ul>
+		<ul class="nav">
+                <li><a href="#section1">Courses</a></li>
+                <li><a href="#section2">Faculty</a></li>
+                <li><a href="#section3">Department Information</a></li>
+                <li><a href="#section4">CS Club</a></li>
+        </ul>
+        <br/>
 		<div class="section black" id="section1">
 				<div class="tileSection">
 					<h2 style="margin-left: 0px;">Courses: Fall 2012</h2>
@@ -69,43 +65,65 @@
 		</div>
 		<div class="section black" id="section2">
 			<div class="tileSection">
-				<h2 style="margin-left: 0px;">Professors</h2>
+				<h2 style="margin-left: 0px;">Faculty</h2>
 				<br />
 				<div class="tile">
 					<a href="#">Dr. Gary</br>Lewandowski</a>
 				</div>
 				<div class="notificationtile">
-					<a href="#">FUNCTIONAL </br>LANGUAGES</a>
+				<span>Functional</br>Languages</span>
 				</div>
 				<br/>
 				<div class="tile">
 					<a href="#">Dr. Michael</br>Goldweber</a>
 				</div>
 				<div class="notificationtile">
-					<a href="#">ABSTRACTION</br>STUFFS</a>
+					<span>ABSTRACTION</br>STUFFS</span>
 				</div>
 				<br />
 				<div class="tile">
 					<a href="#">Dr. Elizabeth</br>Johnson</a>
 				</div>
 				<div class="notificationtile">
-					<a href="#">STRUCTURES</br>OF DATA</a>
+					<span>MOAR</br> Stuffs</span>
 				</div>
 			</div>
 
 		</div>
 		<div class="section black" id="section3">
 			<div class="tileSection">
-				<h2 style="margin-left: 0px;">Made Up People</h2>
+				<h2 style="margin-left: 0px;">Department Information</h2>
 				<br />
 				<div class="tile">
-					<a href="#">Dr. t</br>f</a>
+					<a href="#">General</br>Information</a>
 				</div>
 				<div class="tile">
-					<a href="#">Dr. f</br>f</a>
+					<a href="#">Course</br>Description</a>
 				</div>
 				<div class="tile">
-					<a href="#">Dr. d</br>d</a>
+					<a href="#">Course</br>Sequences</a>
+				</div>
+				<br />
+				<div class="tile">
+					<a href="#">CO-OP</br>Program</a>
+				</div>
+				<div class="tile">
+					<a href="#">Summer</br>Internships</a>
+				</div>
+				<div class="tile">
+					<a href="#">CSCI</br>Alumni</a>
+				</div>
+				<br />
+				<div class="tile">
+					<a href="#">Course</br>Archives</a>
+				</div>
+			</div>
+		</div>
+		<div class="section black" id="section4">
+			<div class="tileSection">
+				<h2 style="margin-left: 0px;">CS Club</h2>
+				<br />
+				</div>
 				</div>
 			</div>
 		</div>
